@@ -1,0 +1,14 @@
+Equinox Desktop Environment version: @EDE_VERSION@.
+
+To report bugs, proposals or anything else please visit:
+http://ede.sourceforge.net
+
+or project page at:
+http://sourceforge.net/project/ede
+
+For authors info, see AUTHORS. Licence and simular stuff is placed in COPYING.
+
+Thanks:
+- FLTK project
+- other projects that help create EDE (source code, icons, inspirations)
+- people that sends patches and ideas
